<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data>
    <variable
        name="setting"
        type="fr.l3miage.amphinote.model.UserModel">

    </variable>
</data>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:textSize="18dp"
        android:text="@string/account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="72dp"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:background="@color/circleBorder"
        app:layout_constraintBottom_toBottomOf="@id/account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />

    <EditText
        android:id="@+id/change_mail"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintEnd_toStartOf="@+id/validate_pass"
        app:layout_constraintTop_toBottomOf="@+id/title_pass"
        android:hint="@{setting.email}"
        />

    <Button
        android:id="@+id/validate_mail"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/valider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="ChangePass"/>

    <EditText
        android:id="@+id/change_pass"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintEnd_toStartOf="@+id/validate_mail"
        app:layout_constraintTop_toBottomOf="@+id/title_mail"
        android:hint="******"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/validate_pass"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/valider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/validate_mail"
        android:onClick="ChangeEmail"
            />

    <TextView
        android:id="@+id/title_mail"
        android:layout_width="191dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="13dp"
        android:text="@string/change_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />

    <View
        android:layout_width="191dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/circleBorder"
        app:layout_constraintBottom_toBottomOf="@id/title_mail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title_pass"
        android:layout_width="191dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="37dp"
        android:text="@string/change_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_pass" />

    <View
        android:layout_width="191dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/circleBorder"
        app:layout_constraintBottom_toBottomOf="@id/title_pass"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
</layout>